<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_posts"
        android:enabled="true"
        android:icon="@drawable/posts_alt_24"
        android:title="@string/post_fragment"/>
    <item
        android:id="@+id/navigation_events"
        android:enabled="true"
        android:icon="@drawable/events_note_24"
        android:title="@string/events_fragment"/>

    <item
        android:id="@+id/navigation_users"
        android:enabled="true"
        android:icon="@drawable/users_circle_24"
        android:title="@string/users_fragment"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/profile_24"
        android:title="@string/profile_fragment"/>
</menu>