<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".ui.NewJobFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_organization_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/job_organization_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_organization_hint"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_position_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/job_position_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_position_hint"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_start_working_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_start_working_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_working_period_start"
            android:imeOptions="actionDone"
            android:inputType="datetime"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_end_working_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_event_field"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_end_working_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_working_period_end"
            android:imeOptions="actionDone"
            android:inputType="datetime"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/link_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_link"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>